UpdatedPortfolio/src/css/Personalize.css
/* PERSONALIZE */

.Personalize {

    display: flex;
    flex-direction: column;
    width: 90%;
    margin: 0 auto;
    margin-top: 100px;
    /* border-radius: 10px; */
    background-color: rgba(255, 255, 255, 0.123);
    backdrop-filter: blur( 5px );
    text-align: left;

}

.PersonalizeContent {

    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;

}

.Personalize h1 {

    color: black;
    font-family: 'Lobster', cursive;
    text-decoration: underline;
    /* text-decoration-color: red; */
    color: white;
    font-size: 50px;
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 20px;

}

.Info {

    display: flex;
    flex-direction: column;
    width: 60%;
    margin: 0 auto;
    text-indent: 25px;
    font-size: 1rem;

}

img.PersonalizeIMG {

    height: auto;
    max-width: 75%;

}

.PersonalizeContent.two {
    margin-top: 25px;
}

img.PersonalizeIMG .Two {
    margin-top: 20px;
}

.Personalize p {

    text-indent: 20px;

}

ul {
    width: 80%;
}

ul li {

    text-indent: 0px;
    text-align: left;

}

.ButtonContainer button {
    width: fit-content;
    margin: 10px;
    padding: 10px;
}

/* MOBILE MEDIA QUERIE */
@media only screen 
  and (min-width: 900px)
  and ( max-width: 5000px ) {

    .Personalize {
        margin: 0 auto;
        width: 90%;
        /* border: none; */
        padding: 10px;
        margin-top: 40px;
        /* border-radius: 10px; */
    }

    .PersonalizeContent {
        width: 90%;
        margin: 0 auto;
    }

    img.PersonalizeIMG .Two {
        margin-top: 20px;
    }

    .Info {

        padding: 30px;
    
    }

}

@media only screen 
  and (min-width: 300px) 
  and (max-width: 900px) {

    .Personalize {
        background-color: white;
        width: 90%;
        margin-top: 50px;

    }

    .Personalize h1 {

        margin: 0 auto;
        color: black;
        padding-bottom: 20px;

    }

    img.PersonalizeIMG .Two {
        margin-top: 20px;
    }

    .PersonalizeContent {

        display: flex;
        width: 90%;
        margin: 0 auto;
        text-indent: 25px;
        flex-direction: column;
    
    }

    img.PersonalizeIMG {

        height: auto;
        max-width: 100%;
        margin-bottom: 20px;
        
    }

    .Info {

        display: flex;
        flex-direction: column;
        width: 90%;
        margin: 0 auto;
        text-indent: 25px;
        justify-content: space-evenly;
        align-items: center;
        font-size: 1rem;

    }

}

